--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "@feathersjs/adapter-commons": "^5.0.34",
     "@feathersjs/authentication": "^5.0.34",
     "@feathersjs/authentication-client": "^5.0.34",
+    "@feathersjs/authentication-local": "^5.0.34",
+    "@feathersjs/authentication-oauth": "^5.0.34",
     "@feathersjs/configuration": "^5.0.34",
     "@feathersjs/errors": "^5.0.34",
     "@feathersjs/feathers": "^5.0.34",
