--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@feathersjs/socketio": "^5.0.34",
     "@feathersjs/transport-commons": "^5.0.34",
     "@feathersjs/typebox": "^5.0.34",
+    "@koa/router": "^14.0.0",
     "knex": "^3.1.0",
     "sqlite3": "^5.1.7",
     "winston": "^3.17.0"
@@ -62,6 +63,7 @@
   "devDependencies": {
     "@feathersjs/cli": "^5.0.34",
     "@feathersjs/rest-client": "^5.0.34",
+    "@types/koa__router": "^12.0.4",
     "@types/mocha": "^10.0.10",
     "@types/node": "^22.15.3",
     "axios": "^1.9.0",
